import { describe, expect, it, beforeAll } from "vitest";
import BaseMarkdown from "../base/BaseMarkdown.vue";
import CoreText from "./CoreText.vue";
import injectionKeys from "@/injectionKeys";
import { buildMockComponent, buildMockCore, mockProvides } from "@/tests/mocks";
import { mount } from "@vue/test-utils";
import { ref } from "vue";
import { Core } from "@/writerTypes";

describe("CoreText", async () => {
	const text = `# Hello\n\nI'm the **content**.`;
	let core: Core;

	beforeAll(() => {
		core = buildMockCore().core;

		core.addComponent(
			buildMockComponent({
				handlers: { "wf-click": "python_handler" },
			}),
		);
	});

	it("should render in non-markdown mode", () => {
		const wrapper = mount(CoreText, {
			global: {
				provide: {
					...mockProvides,
					[injectionKeys.core as symbol]: core,
					[injectionKeys.isBeingEdited as symbol]: ref(false),
					[injectionKeys.evaluatedFields as symbol]: {
						text: ref(text),
						alignment: ref("center"),
						useMarkdown: ref(false),
						quickCopy: ref(false),
					},
				},
			},
		});

		expect(wrapper.element).toMatchSnapshot();
	});

	it("should render in markdown mode", () => {
		const wrapper = mount(CoreText, {
			global: {
				provide: {
					...mockProvides,
					[injectionKeys.core as symbol]: core,
					[injectionKeys.isBeingEdited as symbol]: ref(false),
					[injectionKeys.evaluatedFields as symbol]: {
						text: ref(text),
						alignment: ref("center"),
						useMarkdown: ref(true),
						quickCopy: ref(false),
					},
				},
			},
		});

		expect(wrapper.findComponent(BaseMarkdown).exists()).toBe(true);

		expect(wrapper.element).toMatchSnapshot();
	});
});
