// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CoreText > should render in markdown mode 1`] = `
<div
  class="CoreText"
  data-v-810f69c0=""
  style="cursor: pointer;"
>
  <div
    class="SharedControlBar"
    data-v-5ef423de=""
    data-v-810f69c0=""
  >
    <div
      class="SharedControlBar__content"
      data-v-5ef423de=""
    >
      
      <!--v-if-->
      
    </div>
    <div
      class="SharedControlBar__actions"
      data-v-5ef423de=""
    >
      
      
    </div>
  </div>
</div>
`;

exports[`CoreText > should render in non-markdown mode 1`] = `
<div
  class="CoreText"
  data-v-810f69c0=""
  style="cursor: pointer;"
>
  <div
    class="SharedControlBar"
    data-v-5ef423de=""
    data-v-810f69c0=""
  >
    <div
      class="SharedControlBar__content"
      data-v-5ef423de=""
    >
      
      <p
        class="plainText"
        data-v-810f69c0=""
        style="text-align: center;"
      >
        # Hello

I'm the **content**.
      </p>
      
    </div>
    <div
      class="SharedControlBar__actions"
      data-v-5ef423de=""
    >
      
      
    </div>
  </div>
</div>
`;
